腸内フローラサイトに変更: コンテンツとデザインを完全に更新

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>インソール - 快適な歩行をサポート</title>
+    <title>腸内フローラ - 健康な腸内環境をサポート</title>
     <style>
         * {
             margin: 0;
@@ -26,7 +26,7 @@
 
         /* Header */
         header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
             color: white;
             padding: 1rem 0;
             position: fixed;
@@ -65,7 +65,7 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
             color: white;
             padding: 120px 0 80px;
             text-align: center;
@@ -85,7 +85,7 @@
 
         .cta-button {
             display: inline-block;
-            background: #ff6b6b;
+            background: #FF9800;
             color: white;
             padding: 15px 30px;
             text-decoration: none;
@@ -96,7 +96,7 @@
 
         .cta-button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(255, 107, 107, 0.3);
+            box-shadow: 0 10px 20px rgba(255, 152, 0, 0.3);
         }
 
         /* Features Section */
@@ -135,7 +135,7 @@
         .feature-icon {
             width: 80px;
             height: 80px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
             border-radius: 50%;
             display: flex;
             align-items: center;
@@ -183,7 +183,7 @@
 
         .product-image {
             height: 250px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
             display: flex;
             align-items: center;
             justify-content: center;
@@ -209,12 +209,12 @@
         .price {
             font-size: 1.5rem;
             font-weight: bold;
-            color: #ff6b6b;
+            color: #FF9800;
             margin-bottom: 1rem;
         }
 
         .buy-button {
-            background: #ff6b6b;
+            background: #FF9800;
             color: white;
             border: none;
             padding: 10px 20px;
@@ -225,7 +225,7 @@
         }
 
         .buy-button:hover {
-            background: #ff5252;
+            background: #F57C00;
         }
 
         /* About Section */
@@ -256,7 +256,7 @@
 
         .about-image {
             height: 400px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
             border-radius: 15px;
             display: flex;
             align-items: center;
@@ -304,11 +304,11 @@
         .form-group input:focus,
         .form-group textarea:focus {
             outline: none;
-            border-color: #667eea;
+            border-color: #4CAF50;
         }
 
         .submit-button {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #4CAF50 0%, #45a049 100%);
             color: white;
             border: none;
             padding: 15px 30px;
@@ -340,7 +340,7 @@
 
         .footer-section h3 {
             margin-bottom: 1rem;
-            color: #ff6b6b;
+            color: #FF9800;
         }
 
         .footer-section p,
@@ -351,7 +351,7 @@
         }
 
         .footer-section a:hover {
-            color: #ff6b6b;
+            color: #FF9800;
         }
 
         .footer-bottom {
@@ -409,7 +409,7 @@
     <!-- Header -->
     <header>
         <nav class="container">
-            <div class="logo">インソール</div>
+            <div class="logo">腸内フローラ</div>
             <ul class="nav-links">
                 <li><a href="#home">ホーム</a></li>
                 <li><a href="#features">特徴</a></li>
@@ -423,8 +423,8 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="container">
-            <h1 class="fade-in-up">快適な歩行をサポート</h1>
-            <p class="fade-in-up">あなたの足に最適なインソールで、毎日を快適に過ごしましょう</p>
+            <h1 class="fade-in-up">健康な腸内環境をサポート</h1>
+            <p class="fade-in-up">腸内フローラのバランスを整えて、毎日を健康に過ごしましょう</p>
             <a href="#products" class="cta-button fade-in-up">商品を見る</a>
         </div>
     </section>
@@ -432,22 +432,22 @@
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h2 class="section-title">なぜ私たちのインソールを選ぶのか</h2>
+            <h2 class="section-title">なぜ腸内フローラが重要なのか</h2>
             <div class="features-grid">
                 <div class="feature-card">
-                    <div class="feature-icon">👟</div>
-                    <h3>快適性</h3>
-                    <p>長時間の使用でも疲れにくい、優れたクッション性を提供します。</p>
+                    <div class="feature-icon">🦠</div>
+                    <h3>腸内細菌のバランス</h3>
+                    <p>善玉菌と悪玉菌のバランスを整え、健康的な腸内環境を維持します。</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">🦶</div>
-                    <h3>足の健康</h3>
-                    <p>足のアーチを適切にサポートし、姿勢の改善をサポートします。</p>
+                    <div class="feature-icon">💪</div>
+                    <h3>免疫力の向上</h3>
+                    <p>腸内フローラの改善により、体の免疫力を自然に高めます。</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">🌿</div>
-                    <h3>自然素材</h3>
-                    <p>環境に配慮した自然素材を使用し、肌に優しい設計です。</p>
+                    <h3>自然由来成分</h3>
+                    <p>厳選された自然由来の成分を使用し、体に優しい設計です。</p>
                 </div>
             </div>
         </div>
@@ -459,29 +459,29 @@
             <h2 class="section-title">商品ラインナップ</h2>
             <div class="products-grid">
                 <div class="product-card">
-                    <div class="product-image">👟</div>
+                    <div class="product-image">🦠</div>
                     <div class="product-info">
-                        <h3>スタンダードインソール</h3>
-                        <p>日常使いに最適な基本モデル。軽量で快適な履き心地を提供します。</p>
-                        <div class="price">¥2,980</div>
-                        <button class="buy-button">購入する</button>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">🏃</div>
-                    <div class="product-info">
-                        <h3>スポーツインソール</h3>
-                        <p>運動時の衝撃を軽減し、パフォーマンスを向上させるスポーツ専用モデル。</p>
+                        <h3>プロバイオティクスサプリ</h3>
+                        <p>乳酸菌やビフィズス菌を配合した腸内環境改善サプリメント。</p>
                         <div class="price">¥3,980</div>
                         <button class="buy-button">購入する</button>
                     </div>
                 </div>
                 <div class="product-card">
-                    <div class="product-image">👔</div>
+                    <div class="product-image">🥗</div>
                     <div class="product-info">
-                        <h3>ビジネスインソール</h3>
-                        <p>ビジネスシューズに最適。長時間の立ち仕事でも疲れにくい設計。</p>
-                        <div class="price">¥4,580</div>
+                        <h3>プレバイオティクス食品</h3>
+                        <p>善玉菌のエサとなる食物繊維を豊富に含む健康食品。</p>
+                        <div class="price">¥2,580</div>
+                        <button class="buy-button">購入する</button>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">💊</div>
+                    <div class="product-info">
+                        <h3>腸内フローラ検査キット</h3>
+                        <p>自宅で簡単に腸内環境をチェックできる検査キット。</p>
+                        <div class="price">¥5,980</div>
                         <button class="buy-button">購入する</button>
                     </div>
                 </div>
@@ -495,12 +495,12 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>私たちについて</h2>
-                    <p>私たちは、足の健康と快適性を最優先に考えたインソールの開発に取り組んでいます。</p>
-                    <p>最新の技術と自然素材を組み合わせ、あなたの毎日をより快適にする製品を提供します。</p>
-                    <p>専門家による設計と厳格な品質管理により、安心してご使用いただけます。</p>
+                    <p>私たちは、腸内フローラの研究と健康増進に取り組む専門チームです。</p>
+                    <p>最新の研究結果に基づき、腸内環境の改善を通じて皆様の健康をサポートします。</p>
+                    <p>厳格な品質管理と科学的根拠に基づいた製品開発により、安心してご利用いただけます。</p>
                 </div>
                 <div class="about-image">
-                    🏢
+                    🏥
                 </div>
             </div>
         </div>
@@ -533,12 +533,12 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>インソール</h3>
-                    <p>快適な歩行をサポートするインソールの専門メーカーです。</p>
+                    <h3>腸内フローラ</h3>
+                    <p>腸内環境の改善を通じて健康をサポートする専門メーカーです。</p>
                 </div>
                 <div class="footer-section">
                     <h3>お問い合わせ</h3>
-                    <p>📧 info@insole.com</p>
+                    <p>📧 info@intestinal-flora.com</p>
                     <p>📞 03-1234-5678</p>
                 </div>
                 <div class="footer-section">
@@ -548,7 +548,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 インソール. All rights reserved.</p>
+                <p>&copy; 2024 腸内フローラ. All rights reserved.</p>
             </div>
         </div>
     </footer>
