--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         }
 
         .header.scrolled {
-            background: rgba(255, 255, 255, 0.98);
+            background: rgba(15,32,39,0.98);
             box-shadow: var(--shadow-soft);
         }
 
@@ -111,6 +111,105 @@
 
         .nav-menu a:hover::after {
             width: 100%;
+        }
+
+        /* サイドインジケーター */
+        .side-indicator {
+            position: fixed;
+            right: 30px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 999;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .indicator-dot {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: rgba(255,255,255,0.3);
+            border: 2px solid rgba(255,255,255,0.5);
+            cursor: pointer;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .indicator-dot.active {
+            background: var(--accent-color);
+            border-color: var(--accent-color);
+            transform: scale(1.2);
+        }
+
+        .indicator-dot:hover::before {
+            content: attr(data-section);
+            position: absolute;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            background: var(--primary-color);
+            color: var(--white);
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 12px;
+            white-space: nowrap;
+        }
+
+        /* フローティングCTA */
+        .floating-cta {
+            position: fixed;
+            bottom: 30px;
+            right: 30px;
+            z-index: 998;
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .floating-btn {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background: var(--gradient-accent);
+            color: var(--white);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            font-size: 1.5rem;
+            box-shadow: var(--shadow-strong);
+            transition: all 0.3s ease;
+            animation: pulse 2s infinite;
+        }
+
+        .floating-btn:hover {
+            transform: scale(1.1);
+            box-shadow: 0 15px 40px rgba(0,201,167,0.4);
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        /* ストーリー進行バー */
+        .progress-bar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            background: rgba(255,255,255,0.2);
+            z-index: 1001;
+        }
+
+        .progress-fill {
+            height: 100%;
+            background: var(--gradient-accent);
+            width: 0%;
+            transition: width 0.3s ease;
         }
 
         /* ヒーローセクション */
@@ -600,6 +699,15 @@
             .section-title {
                 font-size: 2rem;
             }
+
+            .side-indicator {
+                right: 15px;
+            }
+
+            .floating-cta {
+                bottom: 15px;
+                right: 15px;
+            }
         }
 
         /* スクロールアニメーション */
@@ -616,6 +724,11 @@
     </style>
 </head>
 <body>
+    <!-- プログレスバー -->
+    <div class="progress-bar">
+        <div class="progress-fill" id="progressFill"></div>
+    </div>
+
     <!-- ヘッダー -->
     <header class="header" id="header">
         <nav class="nav-container">
@@ -630,6 +743,26 @@
             </ul>
         </nav>
     </header>
+
+    <!-- サイドインジケーター -->
+    <div class="side-indicator">
+        <div class="indicator-dot active" data-section="ホーム" data-target="#home"></div>
+        <div class="indicator-dot" data-section="特徴" data-target="#features"></div>
+        <div class="indicator-dot" data-section="料金" data-target="#pricing"></div>
+        <div class="indicator-dot" data-section="治療の流れ" data-target="#treatment"></div>
+        <div class="indicator-dot" data-section="症例" data-target="#cases"></div>
+        <div class="indicator-dot" data-section="お問い合わせ" data-target="#contact"></div>
+    </div>
+
+    <!-- フローティングCTA -->
+    <div class="floating-cta">
+        <a href="#contact" class="floating-btn" title="LINEで予約">
+            <i class="fab fa-line"></i>
+        </a>
+        <a href="tel:06-6653-2883" class="floating-btn" title="電話で予約">
+            <i class="fas fa-phone"></i>
+        </a>
+    </div>
 
     <!-- ヒーローセクション -->
     <section id="home" class="hero">
@@ -815,6 +948,46 @@
             } else {
                 header.classList.remove('scrolled');
             }
+        });
+
+        // プログレスバー
+        window.addEventListener('scroll', function() {
+            const scrollTop = window.pageYOffset;
+            const docHeight = document.body.offsetHeight - window.innerHeight;
+            const scrollPercent = (scrollTop / docHeight) * 100;
+            document.getElementById('progressFill').style.width = scrollPercent + '%';
+        });
+
+        // サイドインジケーター
+        const sections = document.querySelectorAll('section[id]');
+        const indicatorDots = document.querySelectorAll('.indicator-dot');
+
+        window.addEventListener('scroll', function() {
+            let current = '';
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop;
+                const sectionHeight = section.clientHeight;
+                if (pageYOffset >= sectionTop - 200) {
+                    current = section.getAttribute('id');
+                }
+            });
+
+            indicatorDots.forEach(dot => {
+                dot.classList.remove('active');
+                if (dot.getAttribute('data-target') === '#' + current) {
+                    dot.classList.add('active');
+                }
+            });
+        });
+
+        // インジケータードットクリック
+        indicatorDots.forEach(dot => {
+            dot.addEventListener('click', function() {
+                const target = this.getAttribute('data-target');
+                document.querySelector(target).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
         });
 
         // スクロールアニメーション
