--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>インソール外来のご案内 - 天王寺東整形外科クリニック</title>
+    <meta name="description" content="天王寺東整形外科クリニックのインソール外来。3Dスキャン×オーダーメイドで、あなたの歩行を革新します。扁平足、外反母趾、足底腱膜炎の治療。">
+    <meta name="keywords" content="インソール,整形外科,天王寺,足の痛み,扁平足,外反母趾,足底腱膜炎,3Dスキャン,オーダーメイド">
+    <meta name="author" content="天王寺東整形外科クリニック">
+    <meta property="og:title" content="インソール外来のご案内 - 天王寺東整形外科クリニック">
+    <meta property="og:description" content="3Dスキャン×オーダーメイドで、あなたの歩行を革新します。">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://marl0707.github.io/insole-website/">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1559757148-5c350d0d3c56?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80">
+    <link rel="canonical" href="https://marl0707.github.io/insole-website/">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -814,6 +823,176 @@
             from { box-shadow: 0 0 20px rgba(0,201,167,0.3); }
             to { box-shadow: 0 0 30px rgba(0,201,167,0.6); }
         }
+
+        /* AI診断機能 */
+        .ai-diagnosis {
+            position: fixed;
+            bottom: 120px;
+            right: 30px;
+            z-index: 996;
+            background: var(--white);
+            border-radius: 20px;
+            box-shadow: var(--shadow-strong);
+            width: 350px;
+            max-height: 500px;
+            overflow: hidden;
+            transform: translateX(400px);
+            transition: transform 0.3s ease;
+        }
+
+        .ai-diagnosis.open {
+            transform: translateX(0);
+        }
+
+        .ai-header {
+            background: var(--gradient-primary);
+            color: var(--white);
+            padding: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .ai-toggle {
+            position: fixed;
+            bottom: 120px;
+            right: 30px;
+            width: 60px;
+            height: 60px;
+            background: var(--gradient-accent);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: var(--white);
+            font-size: 1.5rem;
+            cursor: pointer;
+            box-shadow: var(--shadow-strong);
+            z-index: 997;
+        }
+
+        .ai-chat {
+            height: 300px;
+            overflow-y: auto;
+            padding: 1rem;
+        }
+
+        .ai-message {
+            margin-bottom: 1rem;
+            padding: 0.5rem 1rem;
+            border-radius: 15px;
+            max-width: 80%;
+        }
+
+        .ai-message.bot {
+            background: #f0f0f0;
+            margin-right: auto;
+        }
+
+        .ai-message.user {
+            background: var(--gradient-accent);
+            color: var(--white);
+            margin-left: auto;
+        }
+
+        .ai-input {
+            display: flex;
+            padding: 1rem;
+            border-top: 1px solid #eee;
+        }
+
+        .ai-input input {
+            flex: 1;
+            border: none;
+            padding: 0.5rem;
+            border-radius: 20px;
+            background: #f5f5f5;
+            margin-right: 0.5rem;
+        }
+
+        .ai-input button {
+            background: var(--accent-color);
+            color: var(--white);
+            border: none;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            cursor: pointer;
+        }
+
+        /* リアルタイム予約システム */
+        .booking-widget {
+            background: var(--white);
+            border-radius: 20px;
+            box-shadow: var(--shadow-soft);
+            padding: 2rem;
+            margin: 2rem 0;
+        }
+
+        .booking-form {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .form-group {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .form-group label {
+            margin-bottom: 0.5rem;
+            font-weight: 600;
+            color: var(--text-dark);
+        }
+
+        .form-group input,
+        .form-group select {
+            padding: 0.8rem;
+            border: 2px solid #eee;
+            border-radius: 10px;
+            font-size: 1rem;
+            transition: border-color 0.3s ease;
+        }
+
+        .form-group input:focus,
+        .form-group select:focus {
+            outline: none;
+            border-color: var(--accent-color);
+        }
+
+        .booking-btn {
+            background: var(--gradient-accent);
+            color: var(--white);
+            padding: 1rem 2rem;
+            border: none;
+            border-radius: 25px;
+            font-size: 1.1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            width: 100%;
+        }
+
+        .booking-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: var(--shadow-soft);
+        }
+
+        /* パフォーマンス最適化 */
+        .lazy-load {
+            opacity: 0;
+            transition: opacity 0.3s ease;
+        }
+
+        .lazy-load.loaded {
+            opacity: 1;
+        }
+
+        /* SEO最適化 */
+        .structured-data {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -1042,6 +1221,81 @@
         </div>
     </footer>
 
+    <!-- AI診断機能 -->
+    <div class="ai-diagnosis" id="aiDiagnosis">
+        <div class="ai-header">
+            <h3>AI診断</h3>
+            <button class="ai-toggle" onclick="toggleAI()">
+                <i class="fas fa-chevron-left"></i>
+            </button>
+        </div>
+        <div class="ai-chat">
+            <!-- AIの返答がここに表示されます -->
+        </div>
+        <div class="ai-input">
+            <input type="text" id="aiInput" placeholder="質問を入力...">
+            <button onclick="askAI()">質問する</button>
+        </div>
+    </div>
+
+    <!-- リアルタイム予約システム -->
+    <div class="booking-widget">
+        <h2>リアルタイム予約</h2>
+        <form class="booking-form">
+            <div class="form-group">
+                <label for="name">お名前</label>
+                <input type="text" id="name" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">電話番号</label>
+                <input type="tel" id="phone" required>
+            </div>
+            <div class="form-group">
+                <label for="date">来院日</label>
+                <input type="date" id="date" required>
+            </div>
+            <div class="form-group">
+                <label for="time">来院時間</label>
+                <input type="time" id="time" required>
+            </div>
+            <div class="form-group">
+                <label for="symptoms">症状</label>
+                <textarea id="symptoms" required></textarea>
+            </div>
+            <button type="submit" class="booking-btn">予約する</button>
+        </form>
+    </div>
+
+    <!-- 構造化データ -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "MedicalClinic",
+        "name": "天王寺東整形外科クリニック",
+        "description": "インソール外来専門の整形外科クリニック",
+        "url": "https://marl0707.github.io/insole-website/",
+        "telephone": "06-6653-2883",
+        "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "大阪市天王寺区",
+            "addressRegion": "大阪府",
+            "addressCountry": "JP"
+        },
+        "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": "34.6581",
+            "longitude": "135.5033"
+        },
+        "openingHours": "Mo-Fr 09:00-18:00, Sa 09:00-13:00",
+        "medicalSpecialty": "整形外科",
+        "availableService": {
+            "@type": "MedicalService",
+            "name": "インソール外来",
+            "description": "3Dスキャン×オーダーメイドインソール治療"
+        }
+    }
+    </script>
+
     <script>
         // ヘッダーのスクロール効果
         window.addEventListener('scroll', function() {
@@ -1215,6 +1469,49 @@
 
         // ページ読み込み時に感動効果を追加
         window.addEventListener('load', addEmotionalEffects);
+
+        // AI診断機能
+        function toggleAI() {
+            const aiDiagnosis = document.getElementById('aiDiagnosis');
+            if (aiDiagnosis.classList.contains('open')) {
+                aiDiagnosis.classList.remove('open');
+            } else {
+                aiDiagnosis.classList.add('open');
+            }
+        }
+
+        // リアルタイム予約システム
+        document.getElementById('booking-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            // フォームのデータを取得
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const date = document.getElementById('date').value;
+            const time = document.getElementById('time').value;
+            const symptoms = document.getElementById('symptoms').value;
+
+            // ここでサーバーにデータを送信する処理を実装
+            console.log('予約フォームが送信されました');
+            console.log('お名前:', name);
+            console.log('電話番号:', phone);
+            console.log('来院日:', date);
+            console.log('来院時間:', time);
+            console.log('症状:', symptoms);
+
+            // フォームをリセット
+            document.getElementById('booking-form').reset();
+        });
+
+        // パフォーマンス最適化
+        window.addEventListener('load', function() {
+            const lazyElements = document.querySelectorAll('.lazy-load');
+            lazyElements.forEach(element => {
+                element.classList.add('loaded');
+            });
+        });
+
+        // SEO最適化
+        document.querySelector('.structured-data').style.display = 'none';
     </script>
 </body>
 </html>
