文言・内容を天下茶屋内科クリニック版に全面刷新

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             line-height: 1.8;
         }
 
-        /* 料金セクション */
+        /* 料金・保険・助成セクション */
         .pricing {
             padding: 100px 0;
             background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
@@ -1004,13 +1004,13 @@
     <!-- ヘッダー -->
     <header class="header" id="header">
         <nav class="nav-container">
-            <div class="logo">天王寺東整形外科クリニック</div>
+            <div class="logo">天下茶屋内科クリニック</div>
             <ul class="nav-menu">
                 <li><a href="#home">ホーム</a></li>
                 <li><a href="#features">特徴</a></li>
-                <li><a href="#pricing">料金</a></li>
+                <li><a href="#pricing">費用・保険</a></li>
                 <li><a href="#treatment">治療の流れ</a></li>
-                <li><a href="#cases">症例</a></li>
+                <li><a href="#cases">対象となる方</a></li>
                 <li><a href="#contact">お問い合わせ</a></li>
             </ul>
         </nav>
@@ -1020,9 +1020,9 @@
     <div class="side-indicator">
         <div class="indicator-dot active" data-section="ホーム" data-target="#home"></div>
         <div class="indicator-dot" data-section="特徴" data-target="#features"></div>
-        <div class="indicator-dot" data-section="料金" data-target="#pricing"></div>
+        <div class="indicator-dot" data-section="費用・保険" data-target="#pricing"></div>
         <div class="indicator-dot" data-section="治療の流れ" data-target="#treatment"></div>
-        <div class="indicator-dot" data-section="症例" data-target="#cases"></div>
+        <div class="indicator-dot" data-section="対象となる方" data-target="#cases"></div>
         <div class="indicator-dot" data-section="お問い合わせ" data-target="#contact"></div>
     </div>
 
@@ -1051,11 +1051,12 @@
         <video class="hero-bg-video" src="https://www.w3schools.com/howto/rain.mp4" autoplay loop muted playsinline></video>
         <div class="hero-content">
             <div class="hero-text">
+                <div style="font-size:1.2rem; font-weight:600; margin-bottom:0.5rem;">天下茶屋駅から徒歩1分</div>
+                <div style="font-size:2rem; font-weight:700; color:#43e97b; margin-bottom:0.5rem;">子供の夢を、足元から支える</div>
                 <h1>インソール外来<br>のご案内</h1>
-                <p>未来の足元を、今ここから。<br>3Dスキャン×オーダーメイドで、あなたの歩行を革新します。</p>
+                <p>コンクリートに囲まれた現代社会で、子どもたちの足に異変が起きています。<br>硬いアスファルトの上を歩き、平らな床ばかりで生活する今の子どもたちは、土や草の上で遊ぶ機会が激減しました。その結果、足の筋力が低下し、扁平足や外反母趾、巻き爪などのトラブルを抱える子どもが急増しています。</p>
                 <div class="cta-buttons">
-                    <a href="#contact" class="btn-primary"><i class="fab fa-line"></i> LINEで予約</a>
-                    <a href="#features" class="btn-secondary">詳しく見る</a>
+                    <a href="#contact" class="btn-primary"><i class="fab fa-line"></i> 今すぐ公式ラインより診療予約</a>
                 </div>
             </div>
             <div class="hero-visual">
@@ -1068,77 +1069,56 @@
     <!-- 特徴セクション -->
     <section id="features" class="features">
         <div class="container">
-            <h2 class="section-title scroll-animate">なぜインソールが重要なのか</h2>
+            <h2 class="section-title scroll-animate">なぜ子どもの足にインソールが必要なのか</h2>
             <div class="features-grid">
+                <div class="feature-card scroll-animate">
+                    <div class="feature-icon">
+                        <i class="fas fa-exclamation-triangle"></i>
+                    </div>
+                    <h3>現代社会で増える足のトラブル</h3>
+                    <p>足は「第二の心臓」と呼ばれ、全身のバランスを支える重要な土台です。<br>足のアーチが崩れると、姿勢が悪くなり、膝や腰、肩への負担が増大。スポーツでのケガにもつながります。</p>
+                </div>
                 <div class="feature-card scroll-animate">
                     <div class="feature-icon">
                         <i class="fas fa-shoe-prints"></i>
                     </div>
-                    <h3>オーダーメイド設計</h3>
-                    <p>3Dスキャナーで足の形を正確に計測し、一人一人に最適なインソールを設計します。歩き方の癖も考慮した完全カスタムメイドです。</p>
-                </div>
-                <div class="feature-card scroll-animate">
-                    <div class="feature-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <h3>ケガの予防</h3>
-                    <p>足の形を整えることで、膝や腰への負担を軽減し、スポーツや日常生活でのケガを予防します。</p>
-                </div>
-                <div class="feature-card scroll-animate">
-                    <div class="feature-icon">
-                        <i class="fas fa-heart"></i>
-                    </div>
-                    <h3>痛みの改善</h3>
-                    <p>外反母趾、扁平足、足底腱膜炎など、様々な足の痛みを改善し、快適な歩行をサポートします。</p>
+                    <h3>オーダーメイドインソールの意義</h3>
+                    <p>一人ひとりの足の形状に合わせて作製されるインソールは、足本来の機能を取り戻し、正しい姿勢へと導きます。<br>ケガをしない体づくりは、足元から始まります。</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- 料金セクション -->
+    <!-- 料金・保険・助成セクション -->
     <section id="pricing" class="pricing">
         <div class="container">
-            <h2 class="section-title scroll-animate">料金プラン</h2>
+            <h2 class="section-title scroll-animate">保険適応・小児医療費助成について</h2>
             <div class="pricing-grid">
                 <div class="pricing-card scroll-animate">
-                    <h3>3割負担</h3>
-                    <div class="price">¥2,000</div>
-                    <div class="price-label">1足あたり</div>
-                    <ul class="disease-list">
-                        <li>扁平足</li>
-                        <li>凹足</li>
-                        <li>外反母趾</li>
-                        <li>足底腱膜炎</li>
-                        <li>モートン病</li>
-                        <li>胼胝・鶏眼</li>
-                    </ul>
+                    <h3>保険適応でのインソール製作</h3>
+                    <div class="price">医師の診断のもと製作</div>
+                    <div class="price-label">インソール代金の全額を一旦お支払いいただき、ご自身で健康保険組合に請求していただく形となります。</div>
                 </div>
                 <div class="pricing-card featured scroll-animate">
-                    <h3>1割負担</h3>
-                    <div class="price">¥700</div>
-                    <div class="price-label">1足あたり</div>
+                    <h3>18歳以下は小児医療費助成</h3>
+                    <div class="price">大阪市内在住の場合</div>
+                    <div class="price-label">1医療機関ごと 1日最大500円（月2日限度）</div>
+                </div>
+                <div class="pricing-card scroll-animate">
+                    <h3>保険適応で製作可能な疾患</h3>
                     <ul class="disease-list">
                         <li>扁平足</li>
-                        <li>凹足</li>
+                        <li>凹足（ハイアーチ）</li>
                         <li>外反母趾</li>
                         <li>足底腱膜炎</li>
                         <li>モートン病</li>
-                        <li>胼胝・鶏眼</li>
+                        <li>胼胝（タコ）・鶏眼（ウオノメ）</li>
                     </ul>
                 </div>
-                <div class="pricing-card scroll-animate">
-                    <h3>自費診療</h3>
-                    <div class="price">¥15,000</div>
-                    <div class="price-label">1足あたり</div>
-                    <ul class="disease-list">
-                        <li>スポーツ用</li>
-                        <li>ファッション重視</li>
-                        <li>特殊な用途</li>
-                        <li>保険適用外</li>
-                        <li>カスタムデザイン</li>
-                        <li>プレミアム素材</li>
-                    </ul>
-                </div>
+            </div>
+            <div style="margin-top:2rem; color:#888; font-size:1rem;">
+                ※小児医療費助成とは…医療費・訪問看護利用料の一部自己負担額を助成。<br>
+                ※詳細は大阪市ホームページをご参照ください。
             </div>
         </div>
     </section>
@@ -1146,49 +1126,49 @@
     <!-- 治療フロー -->
     <section id="treatment" class="treatment-flow">
         <div class="container">
-            <h2 class="section-title scroll-animate">治療の流れ</h2>
+            <h2 class="section-title scroll-animate">インソール治療の流れ</h2>
             <div class="flow-container">
                 <div class="flow-line"></div>
                 <div class="flow-steps">
                     <div class="flow-step scroll-animate">
                         <div class="step-number">1</div>
-                        <h3>診察・検査</h3>
-                        <p>医師による詳細な診察と、必要に応じてレントゲン撮影を行い、足の状態を正確に把握します。</p>
+                        <h3>診察</h3>
+                        <p>医師が足の状態を診察します。必要に応じてレントゲン検査やエコー検査を行う場合がございます。</p>
                     </div>
                     <div class="flow-step scroll-animate">
                         <div class="step-number">2</div>
-                        <h3>3D計測</h3>
-                        <p>最新の3Dスキャナーで足の形を正確に計測し、歩き方の分析も行います。</p>
+                        <h3>計測</h3>
+                        <p>義肢装具士が足の形などを計測し、その結果を元に医師が処方し、インソールを製作します。</p>
                     </div>
                     <div class="flow-step scroll-animate">
                         <div class="step-number">3</div>
-                        <h3>完成・装着</h3>
-                        <p>約2週間後に完成したインソールを装着し、適合確認と調整を行います。</p>
+                        <h3>完成</h3>
+                        <p>約1週間でインソールが完成します。</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- 症例セクション -->
+    <!-- 対象となる方セクション -->
     <section id="cases" class="cases">
         <div class="container">
-            <h2 class="section-title scroll-animate">こんな方におすすめ</h2>
+            <h2 class="section-title scroll-animate">以下に当てはまる方は一度インソール外来をご検討下さい</h2>
             <div class="case-grid">
                 <div class="case-card scroll-animate">
                     <img src="https://images.unsplash.com/photo-1503454537195-1dcabb73ffb9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="子どもの足" class="case-image">
-                    <h3>お子様の足の変形が気になる方</h3>
-                    <p>成長期のお子様は、適切な処置を行うことで足の形が改善される可能性が高くなります。早期発見・早期治療が重要です。</p>
+                    <h3>子どもの足の変形</h3>
+                    <p>成長期の子どもの足は軟骨が多く柔らかいため変形しやすく、狭い靴の着用やスポーツによる過度な負担でリスクが増加します。<br>調査では小学生の40％以上に足部変形が見られ、これは姿勢の悪化や運動能力の低下、転倒リスクにつながります。適切な足装具により、変形の矯正、正しい足のポジション形成、アーチ構造の形成による力の分散などの効果が期待できます。</p>
                 </div>
                 <div class="case-card scroll-animate">
-                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="スポーツ" class="case-image">
-                    <h3>スポーツを楽しみたい方</h3>
-                    <p>スポーツ時のパフォーマンス向上やケガの予防に、専用のインソールが効果的です。</p>
+                    <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="歩行" class="case-image">
+                    <h3>歩くと転びやすい・疲れやすい</h3>
+                    <p>筋力が低下してくると正しい姿勢を保持できず、骨格のバランスが崩れてしまい、転倒やつまずきを起こすリスクが上昇し、疲れやすくなってしまいます。<br>適した足底装具を使用することで地面との設置面積が増えるとバランスをとりやすくなり、転倒やつまずきのリスクを抑えることができます。</p>
                 </div>
                 <div class="case-card scroll-animate">
-                    <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="歩行" class="case-image">
-                    <h3>歩くと疲れやすい方</h3>
-                    <p>足の形や歩き方の癖により、すぐに疲れてしまう場合があります。インソールで改善が期待できます。</p>
+                    <img src="https://images.unsplash.com/photo-1576091160399-112ba8d25d1f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1000&q=80" alt="足の痛み" class="case-image">
+                    <h3>足が痛い・変形のある方</h3>
+                    <p>足の痛み、変形などがある場合、特定の場所にかかる過度な負担を軽減する除圧などで根本的な原因にアプローチした治療が有効です。</p>
                 </div>
             </div>
         </div>
@@ -1199,24 +1179,24 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>天王寺東整形外科クリニック</h3>
-                    <p>〒000-0000<br>大阪市天王寺区○○町0-0-0</p>
+                    <h3>天下茶屋内科クリニック</h3>
+                    <p>〒557-0015<br>大阪府大阪市西成区花園南２丁目７−８ 泰山第一ビル １階</p>
                     <div class="phone-number">06-6653-2883</div>
                     <p>診療時間: 平日 9:00-18:00<br>土曜 9:00-13:00<br>休診日: 日曜・祝日</p>
                 </div>
                 <div class="footer-section">
                     <h3>アクセス</h3>
-                    <p>天王寺駅から徒歩5分<br>地下鉄御堂筋線・谷町線<br>JR環状線・大和路線</p>
+                    <p>天下茶屋駅から徒歩1分</p>
                 </div>
                 <div class="footer-section">
-                    <h3>お問い合わせ</h3>
+                    <h3>ご連絡・お問い合わせ</h3>
                     <p><a href="tel:06-6653-2883">📞 06-6653-2883</a></p>
                     <p><a href="mailto:info@example.com">📧 info@example.com</a></p>
-                    <p><a href="#"><i class="fab fa-line"></i> LINEで予約</a></p>
+                    <p><a href="#"><i class="fab fa-line"></i> 公式LINEで予約</a></p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 天王寺東整形外科クリニック. All rights reserved.</p>
+                <p>&copy; 2024 天下茶屋内科クリニック. All rights reserved.</p>
             </div>
         </div>
     </footer>
